<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:id="@+id/item_rl_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:background="@android:color/transparent" />
        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/bt_back"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="45sp"
         />
        <EditText
            android:id="@+id/et_username"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_below="@id/tv_app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:autofillHints="Alex" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_below="@id/et_username"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="Alex@gmail.com" />
        <EditText
            android:id="@+id/et_school"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_below="@id/et_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/school"
            android:inputType="textShortMessage"
            android:autofillHints="UIT"/>
        <EditText
            android:id="@+id/et_class"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_below="@id/et_school"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/class_room"
            android:inputType="textShortMessage"
            android:autofillHints="ATTT2019"/>
        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_below="@id/et_class"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:autofillHints="0000000000" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_below="@id/et_phone_number"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:autofillHints="Alex1234!"
            android:hint="@string/password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_below="@id/et_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:autofillHints="Alex1234!" />
        <Button
            android:id="@+id/bt_signup"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_below="@id/et_confirm_password"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="25sp"
            tools:ignore="VisualLintButtonSize" />
    </RelativeLayout>
</ScrollView>