<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:id="@+id/item_rl_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/black"
            android:background="@android:color/transparent" />
        <TextView
            android:id="@+id/tv_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/bt_back"
            android:layout_marginTop="10dp"
            android:text="@string/user_info"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="45sp"
            />
        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_user_info"
            android:text="@string/user_name"
            android:textSize="20sp"
            android:textColor="@color/teal_700"/>
        <TextView
            android:id="@+id/tv_username_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_username"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_username"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:layout_alignStart="@id/tv_username"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/teal_700"/>
        <TextView
            android:id="@+id/tv_email_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_email"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_email"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email"
            android:layout_alignStart="@id/tv_username"
            android:layout_marginTop="20dp"
            android:text="@string/school"
            android:textSize="20sp"
            android:textColor="@color/teal_700"/>
        <TextView
            android:id="@+id/tv_school_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_school"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_school"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_school"
            android:layout_alignStart="@id/tv_username"
            android:layout_marginTop="20dp"
            android:text="@string/class_room"
            android:textSize="20sp"
            android:textColor="@color/teal_700"/>
        <TextView
            android:id="@+id/tv_class_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_class"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_class"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_class"
            android:layout_alignStart="@id/tv_username"
            android:layout_marginTop="20dp"
            android:text="@string/phone_number"
            android:textSize="20sp"
            android:textColor="@color/teal_700"/>
        <TextView
            android:id="@+id/tv_phone_number_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_phone_number"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/tv_phone_number"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone_number"
            android:layout_alignStart="@id/tv_username"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textSize="20sp"
            android:textColor="@color/teal_700"/>
        <TextView
            android:id="@+id/tv_password_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/tv_password"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/tv_password"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RelativeLayout>
</ScrollView>